feat: Add listSequences as a demo
